# mcps

./: .gitignore  README.md  pyproject.toml
mcps/: obsidian.py  ollama_mcp.py
